manifests/directus/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: directus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: directus
  template:
    metadata:
      labels:
        app: directus
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: directus
          image: directus/directus:11
          ports:
            - containerPort: 8055
          volumeMounts:
            - name: uploads
              mountPath: /directus/uploads
      volumes:
        - name: uploads
          persistentVolumeClaim:
            claimName: directus-uploads-pvc
