manifests/directus/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: directus
  annotations:
    cert-manager.io/issuer: letsencrypt-ionos-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts: [cms.aquis-mana.de]
      secretName: directus-tls
  rules:
    - host: cms.aquis-mana.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: directus
                port:
                  number: 8055
